--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
-  "dependencies": {
+ "dependencies": {
+  "vite": "^5.0.0", 
+  "react": "^18.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@radix-ui/react-accordion": "^1.2.12",
